# dash-lite

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  pythonanywhere_wsgi.py  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: dmc.instructions.md  project_plan.instructions.md
.github/workflows/: test.yml
documentation/: TESTING.md  TOOLS.md
src/dash_lite/: app.py  callbacks.py  layout.py
tests/: README.md  __init__.py  conftest.py  test_app.py  test_callbacks.py  test_layout.py
