[project]
name = "dash-lite"
version = "0.1.0"
description = ""
authors = [
    {name = "justin.paro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash (>=3.3.0,<4.0.0)",
    "dash-mantine-components (>=2.4.0,<3.0.0)",
    "dash-iconify (>=0.1.2,<0.2.0)",
]

[project.scripts]
dashlite = "dash_lite.app:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
